Renamed app files.

--- a/app/index.html
+++ b/app/index.html
@@ -4,14 +4,10 @@
 </head>
 <body>
   <div id="controller">
-    <button id="#message_node">Message</button>
-    <button id="#task_node">Task</button>
+    <button id="message-node">Message</button>
+    <button id="task-node">Task</button>
+    <hr/>
+    <div id="props-panel"></div>
   </div>
-  <hr/>
-  <div id="message-event-props-view">
-    Message Name: <input type="text"/>
-  </div>
-
-
   <script src="app.js"></script>
 </html>
