--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,16 @@
 <html>
-<head>
-  <title>Backbone Example</title>
-</head>
-<body>
-  <div id="controller">
-    <button id="message-node">Message</button>
-    <button id="task-node">Task</button>
-    <hr/>
-    <div id="props-panel"></div>
-  </div>
-  <script src="app.js"></script>
+  <head>
+    <title>Backbone Example</title>
+    
+  </head>
+  <body>
+      <div id="controller">
+        <button id="message-node">Message</button>
+        <button id="task-node">Task</button>
+          <hr/>
+        <div id="props-panel"></div>
+      </div>
+      
+      <script src="app.js"></script>
+  </body>
 </html>
