Instantiated and added a collection view.

--- a/app/message-event/message-event-props.template.html
+++ b/app/message-event/message-event-props.template.html
@@ -1,4 +1,5 @@
 <div>        
     Message Name: <input type="text" value="{{ messageName }}"/>
+    <button id="print">print</button>
 </div>
     
